Model Building - Modified

--- a/Sales Prediction using Advertising Data/sales-prediction-using-advertisement.ipynb
+++ b/Sales Prediction using Advertising Data/sales-prediction-using-advertisement.ipynb
@@ -1765,7 +1765,7 @@
    "id": "6b5464d9",
    "metadata": {},
    "source": [
-    "### 4.3.3 Conclusion : \n",
+    "### 4.3.3 Findings : \n",
     "**For Linear Regression, applying StandardScaler does not affect the model’s predictions or performance, only the scale of the coefficients. Hence, both scaled and unscaled models give the same results.**"
    ]
   }
